# ComfyUI-MuseTalk-KJ

./: .gitignore  README.md  nodes.py  pyproject.toml  requirements.txt  test_workflow.json
example_workflows/: musetalk_vid2vid_example.json
musetalk/models/: vae.py
musetalk/whisper/: audio.py
musetalk/whisper/checkpoints/: place_whisper_model_here.txt
